# music_player

src/: CMakeLists.txt  README_ME.md  decode_not_for_use.c  encode.c  main.c  play.c
src/cmake/: FindSDL_MIXER.cmake
src/sdl_sound/: mixer_loading.c  sound_decode_functions.c  sound_dsa.c  sound_functions.c  sound_samples_functions.c
